refactor: getter에서 리스트를 반환할 때 방어적 복사 적용